# Phytomni-Manuscript

./: .Rprofile  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  reproduce.manifest.yaml  reproduce.sh
AnalystAgent_evaluation/: evaluation_scripts.ipynb
DataAgent Multi-species/: data.xlsx  plot.py
DeepGenomeAgent Evaluation/: score_hallucination.ipynb  score_plackett_luce.ipynb
Expert Evaluation/: plot.py
Extended Data Fig. 5/: Phytomni-Multiomics-for_plot.txt  extended_data_fig. 5ab.R  extended_data_fig. 5ab.ipynb  extended_data_fig. 5c.R  extended_data_fig. 5d.ipynb  fig.s16d.ipynb  paper_meta_match_v1_v2_250810_year_counts.csv  plot_figure_Extended Data Fig_5ab.R
Extended Data Fig. 6/: PhytoBench-Knowledge-ID_250923_check_results_renamed.xlsx  extended_data_fig. 6abc.Rmd  extended_data_fig. 6abc.ipynb  extended_data_fig. 6de.ipynb  extended_data_fig. 6de.py  extended_data_fig. 6fg.ipynb  extended_data_fig.6ab.ipynb  extended_data_fig_6abc.Rmd  fig.s23.ipynb
Extended Data Fig. 7/: extended_data_fig. 7.ipynb  extended_data_fig.7ab.ipynb
Fig. 2/: fig. 2.ipynb
Fig. 3/: PhytoBench-Paper-for_plot.xlsx  fig. 3.ipynb
Fig. S1/: plot_figure_s1AB.R
Fig. S16/: fig.s16d.ipynb
Fig. S22/: plot.py
Fig. S23/: fig.s23.ipynb
Fig. S9/: fig.s9.ipynb
Knowledge&ReviewAgent Evaluation/: evaluation_id.py  evaluation_review.py  evaluation_trace.py
Supplementary Fig. 1/: supplementary_fig. 1.ipynb
Supplementary Fig. 10-13/: supplementary_fig. 10-13.ipynb
Supplementary Fig. 14/: Supplementary Fig. 14.ipynb  supplementary_fig. 14.ipynb
(+56 files in other folders)
