[project]
name = "phytomni-figures"
version = "0.1.0"
description = "Figure-reproduction environment for the Phytomni manuscript"
requires-python = ">=3.12"
dependencies = [
    "colorlover>=0.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "kaleido==0.2.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.1",
    "plotly==6.0.1",
    "pyyaml>=6.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
deepgenome-eval = [
    "aiofiles>=24.1.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "openai>=2.0.0",
]

[dependency-groups]
dev = [
    "networkx>=3.4.2",
    "pytest>=8.0",
]
